--- a/frontend_store/index.html
+++ b/frontend_store/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
 
+    <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
+    <!-- Klarna -->
+    <script src="https://x.klarnacdn.net/kp/lib/v1/api.js" async></script>
   </head>
   <body>
     <div id="app"></div>
